differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr70252.c-4.8.2-2.out.txt
pr70252.c: In function ‘foo’:
pr70252.c:12:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 92; i <= 141; i += 2) {
   ^
pr70252.c:12:3: note: use option -std=c99 or -std=gnu99 to compile your code
